reorder folders, implement login, no logout yet

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,13 @@
     "jsx-a11y",
     "import"
   ],
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "paths": ["src"]
+      }
+    }
+  },
   "rules": {
     "arrow-body-style": [
       2,
