--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "apollo-link-http": "^1.5.4",
     "graphql": "^14.0.0",
     "graphql-tag": "^2.9.2",
+    "moment": "^2.22.2",
+    "prop-types": "^15.6.2",
+    "query-string": "^6.1.0",
     "react": "^16.4.2",
     "react-apollo": "^2.1.11",
     "react-dom": "^16.4.2",
