--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "node-sass": "^4.11.0",
     "prop-types": "*",
     "query-string": "^6.4.0",
-    "react": "*",
-    "react-apollo": "*",
-    "react-dom": "*",
-    "react-router": "^5.0.0",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "^2.1.8"
+    "react": "^16.8.6",
+    "react-apollo": "^2.5.8",
+    "react-dom": "^16.8.6",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
